[metadata]
name = gpt-ltm
version = 0.0.1
author = AuroraInfinit
author_email = AuroraInfinit@gmail.com
description = A package for adding long term memory to GPT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AuroraInfinite/gpt-ltm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True